--- a/app/views/admin/countries/_form.html.erb
+++ b/app/views/admin/countries/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for([:admin, @country]) do |f| %>
     <%= f.input :name %>
-    <%= f.input :flag %>
+    <%= f.input :photo, as: :file %>
     <%= f.submit %>
 <% end %>
 
