--- a/app/views/admin/countries/index.html.erb
+++ b/app/views/admin/countries/index.html.erb
@@ -1,12 +1,16 @@
-<h1>Admin Portal - Countries</h1>
+<div class="container">
+  <h1>Admin Portal - Countries</h1>
 
-<% @countries.each do |country| %>
-  <p>
-    <%= country.name %>
-    <%= country.flag %>
-    <%= link_to "Edit", edit_admin_country_path(country) %>
-    <%= link_to "Delete", admin_country_path(country), method: :delete %>
-  </p>
-<% end %>
+  <% @countries.each do |country| %>
+    <p>
+      <%= country.name %>
+      <% if country.photo.attachment %>
+        <%= cl_image_tag country.photo.key, height: 50, width: 50, crop: :fill %>
+      <% end %>
+      <%= link_to "Edit", edit_admin_country_path(country) %>
+      <%= link_to "Delete", admin_country_path(country), method: :delete %>
+    </p>
+  <% end %>
 
-<%= link_to "Add a new country", new_admin_country_path %>
+  <%= link_to "Add a new country", new_admin_country_path %>
+</div>
