--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,50 @@
-.navbar-lewagon {
+.navbar-foenix {
+  display: flex;
   justify-content: space-between;
-  background: white;
+  padding: 0 100px 0 50px;
+  height: 80px;
+  align-items: center;
+  background-color: transparent;
 }
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
+.navbar-left {
+  display: flex;
+  width: 40%;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+.navbar-right {
+  display: flex;
+  width: 25%;
+  justify-content: space-between;
+  align-items: center;
 }
+
+.navbar-logo {
+  width: 50px;
+}
+
+.small-chevron {
+  font-size: 10px;
+}
+
+.navbar-item {
+  a {
+    color: #676767;
+  }
+  i {
+    color: #676767;
+  }
+  &:hover {
+    a {
+      text-decoration: none;
+      color: #474747;
+    }
+    i {
+      color: #474747;
+    }
+  }
+}
+
+
