--- a/app/assets/stylesheets/pages/_job_index.scss
+++ b/app/assets/stylesheets/pages/_job_index.scss
@@ -79,7 +79,17 @@
   width: 30px !important;
 }
 
-
+.work-with-us-card {
+  width: 40%;
+  height: 130px;
+  border-radius: 8px;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  box-shadow: 2px 2px 20px rgba(0,0,0,0.1);
+}
 
 
 
