first-section of home, almost done with mobile-navbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,10 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+
+// h1 {
+//   @include for-phone-only {
+//     font-size: 32px;
+//   }
+// }
