--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,3 +5,16 @@
   <p><%= link_to "Jobs", jobs_path %></p>
   <% end %>
 </div>
+
+<div class="home">
+  <div class="first-section">
+    <%= cl_image_tag("Foenix-first-section-svg_ykndwi.png", :quality=>"auto", class: "first-section-svg") %>
+    <div class="first-section-text">
+      <h1>Coding and Marking Made <span>Easy</span></h1>
+      <p>Plug-and-play Industrial inkjet Printer for all types of production lines</p>
+    </div>
+    <div class="first-section-image">
+      <%= cl_image_tag("Foenix-machine_iqmh2t.png", :quality=>"auto") %>
+    </div>
+  </div>
+</div>
