--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,106 @@
 // Specific CSS for your home-page
+
+.first-section {
+  height: 100vh;
+  background: linear-gradient(#EDEFF4, #FAFBFC);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  position: relative;
+  overflow: hidden;
+
+  @include for-medium-devices-down {
+    flex-direction: column-reverse;
+    justify-content: center;
+  }
+
+  @include for-small-devices-down {
+  }
+
+  @include for-xsmall-phone-only {
+    height: 110vh;
+    justify-content: flex-start;
+  }
+}
+
+
+.first-section-svg {
+  position: absolute;
+    right: -300px;
+    top: -300px;
+  z-index: 0;
+  width: 1000px;
+  height: auto;
+
+  @include for-medium-devices-down {
+    width: 650px;
+    right: -100px;
+    top: -200px;
+  }
+
+  @include for-small-devices-down {
+    width: 450px;
+    top: -50px;
+    right: -50px;
+  }
+
+  @include for-phone-only {
+    width: 400px;
+    top: -60px;
+    right: -50px;
+  }
+
+  @include for-xsmall-phone-only {
+    width: 350px;
+    right: -70px;
+    top: -40px;
+  }
+}
+
+.first-section-text {
+  width: 400px;
+  position: relative;
+  z-index:1;
+  padding: 20px;
+
+  & h1 {
+    color: #0D1B26;
+  }
+
+  & span {
+    color: #DFA740;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #EECDB5;
+  }
+
+  & p {
+    padding-top: 20px;
+    color: #747B8A;
+  }
+
+  @include for-phone-only {
+    width: 80vw;
+
+    & h1 {
+      padding-top: 80px;
+    }
+  }
+}
+
+.first-section-image {
+  position: relative;
+  z-index:1;
+
+  & img {
+    height: auto;
+    width: 600px;
+
+    @include for-large-devices-down {
+      width: 500px;
+    }
+
+    @include for-small-devices-down {
+      width: 60vw;
+    }
+  }
+}
