added one last thing

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -140,6 +140,10 @@
     width: 90vw;
   }
 
+  @include for-small-devices-down {
+    height: 80vh;
+  }
+
   @include for-xsmall-phone-only {
     height: 80vh;
     top: -200px;
