--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,4 +17,13 @@
       <%= cl_image_tag("Foenix-machine_iqmh2t.png", :quality=>"auto") %>
     </div>
   </div>
+  <div class="second-section">
+    <%= cl_image_tag("Foenix-first-section-svg_ykndwi.png", :quality=>"auto", class: "first-section-svg-2") %>
+    <div class="second-section-one">
+      <%= image_tag 'section-two-icon.png' %>
+      <h2>Stress-free product traceability</h2>
+      <p>Take your product traceability to all new level by printing in any languages, any fonts and in high resolution on any product</p>
+      <a href="/" class="yellow-button"> Learn More <i class="fas fa-arrow-right"></i></a>
+    </div>
+  </div>
 </div>
