finished the navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,9 +8,11 @@
         <%= t("navbar.products") %> <i class="fas fa-chevron-down small-chevron"></i>
       </a>
       <div class="dropdown-menu" aria-labelledby="productsDropdown">
-        <%= link_to t("navbar.printers"), root_path, class: "dropdown-item"  %>
-        <%= link_to t("navbar.software"), root_path, class: "dropdown-item"  %>
-        <%= link_to t("navbar.inks"), root_path, class: "dropdown-item"  %>
+        <ul class="dropdown-menu-ul">
+          <li><%= image_tag 'icon-1.png' %><%= link_to t("navbar.printers"), root_path %></li>
+          <li><%= image_tag 'icon-2.png' %><%= link_to t("navbar.software"), root_path %></li>
+          <li><%= image_tag 'icon-3.png' %><%= link_to t("navbar.inks"), root_path %></li>
+        </ul>
       </div>
     </div>
     <div class="navbar-item hidden">
@@ -18,9 +20,11 @@
         <%= t("navbar.services") %> <i class="fas fa-chevron-down small-chevron"></i>
       </a>
       <div class="dropdown-menu" aria-labelledby="serviceDropdown">
-        <%= link_to t("navbar.distributors"), root_path, class: "dropdown-item"  %>
-        <%= link_to t("navbar.cost"), root_path, class: "dropdown-item"  %>
-        <%= link_to t("navbar.FAQ"), root_path, class: "dropdown-item"  %>
+        <ul class="dropdown-menu-ul">
+          <li><%= image_tag 'icon-4.png' %><%= link_to t("navbar.distributors"), root_path %></li>
+          <li><%= image_tag 'icon-5.png' %><%= link_to t("navbar.cost"), root_path %></li>
+          <li><%= image_tag 'icon-6.png' %><%= link_to t("navbar.FAQ"), root_path %></li>
+        </ul>
       </div>
     </div>
     <div class="navbar-item hidden">
@@ -28,9 +32,11 @@
         <%= t("navbar.company") %> <i class="fas fa-chevron-down small-chevron"></i>
       </a>
       <div class="dropdown-menu" aria-labelledby="companyDropdown">
-        <%= link_to t("navbar.about"), root_path, class: "dropdown-item"  %>
-        <%= link_to t("navbar.careers"), jobs_path, class: "dropdown-item"  %>
-        <%= link_to t("navbar.news"), root_path, class: "dropdown-item"  %>
+        <ul class="dropdown-menu-ul">
+          <li><%= image_tag 'icon-7.png' %><%= link_to t("navbar.about"), root_path %></li>
+          <li><%= image_tag 'icon-8.png' %><%= link_to t("navbar.careers"), jobs_path %></li>
+          <li><%= image_tag 'icon-9.png' %><%= link_to t("navbar.news"), root_path %></li>
+        </ul>
       </div>
     </div>
   </div>
@@ -50,8 +56,11 @@
         <%= locale.capitalize %> <i class="fas fa-chevron-down small-chevron"></i>
       </a>
       <div class="dropdown-menu" aria-labelledby="productsDropdown">
-        <%= link_to "English", { :locale=>'en' }, class: "dropdown-item" %>
-        <%= link_to "Français", { :locale=>'fr' }, class: "dropdown-item" %>
+        <ul class="dropdown-menu-ul">
+          <li><%= image_tag 'uk.png' %><%= link_to "English", { :locale=>'en' } %></li>
+          <li><%= image_tag 'france.png' %> <%= link_to "Français", { :locale=>'fr' } %></li>
+        </ul>
+
       </div>
     </div>
   </div>
