--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,5 +25,49 @@
       <p>Take your product traceability to all new level by printing in any languages, any fonts and in high resolution on any product</p>
       <a href="/" class="yellow-button"> Learn More <i class="fas fa-arrow-right"></i></a>
     </div>
+    <div class="second-section-two">
+      <div class="code-everything">
+        <h3>Code Everything</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur.</p>
+        <div class="second-section-two-columns">
+          <ul class="second-section-two-columns-one">
+            <li><%= image_tag 'foenix-check.png' %>Text</li>
+            <li><%= image_tag 'foenix-check.png' %>Use by date</li>
+            <li><%= image_tag 'foenix-check.png' %>Time</li>
+            <li><%= image_tag 'foenix-check.png' %>Lot number</li>
+            <li><%= image_tag 'foenix-check.png' %>Logo</li>
+            <li><%= image_tag 'foenix-check.png' %>Barcodes</li>
+          </ul>
+          <ul class="second-section-two-columns-two">
+            <li><%= image_tag 'foenix-check.png' %>QR Codes</li>
+            <li><%= image_tag 'foenix-check.png' %>Counter</li>
+            <li><%= image_tag 'foenix-check.png' %>Shift</li>
+            <li><%= image_tag 'foenix-check.png' %>Variable Data</li>
+            <li><%= image_tag 'foenix-check.png' %>External Data</li>
+          </ul>
+        </div>
+      </div>
+      <div class="print-on-everything">
+        <h3>Print on anything</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur.</p>
+        <div class="second-section-two-columns">
+          <ul class="second-section-two-columns-one">
+            <li><%= image_tag 'foenix-check.png' %>Text</li>
+            <li><%= image_tag 'foenix-check.png' %>Use by date</li>
+            <li><%= image_tag 'foenix-check.png' %>Time</li>
+            <li><%= image_tag 'foenix-check.png' %>Lot number</li>
+            <li><%= image_tag 'foenix-check.png' %>Logo</li>
+            <li><%= image_tag 'foenix-check.png' %>Barcodes</li>
+          </ul>
+          <ul class="second-section-two-columns-two">
+            <li><%= image_tag 'foenix-check.png' %>QR Codes</li>
+            <li><%= image_tag 'foenix-check.png' %>Counter</li>
+            <li><%= image_tag 'foenix-check.png' %>Shift</li>
+            <li><%= image_tag 'foenix-check.png' %>Variable Data</li>
+            <li><%= image_tag 'foenix-check.png' %>External Data</li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
