--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
 
   <div class="footer-foenix">
     <div class="footer-left">
@@ -47,3 +47,4 @@
     </div>
   </div>
 </div>
+ -->
